fix piled container layering issues on Chrome on iOS

--- a/code13/landing/src/styles/landing-layout.less
+++ b/code13/landing/src/styles/landing-layout.less
@@ -65,12 +65,14 @@ section {
 
     &.middle {
       background: #F4A259;
-      transform: perspective(5000px) rotateY(5deg) skewY(1deg) scale(0.98);
+      /* Note that rotateY(5deg) caused layer/zindex issues on Chrome on iOS */
+      transform: perspective(5000px) rotateY(0) skewY(1deg) scale(0.98);
     }
 
     &.front {
+      /* Note that rotateY(-2deg) caused layer/zindex issues on Chrome on iOS */
       background: #BC4B51;
-      transform: perspective(3000px) rotateY(-2deg) skewY(-0.5deg) scale(0.97);
+      transform: perspective(3000px) rotateY(0) skewY(-0.5deg) scale(0.97);
     }
   }
 
